<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/>
    </parent>

    <groupId>org.frankframework</groupId>
    <artifactId>webapp-template</artifactId>
    <version>${revision}</version>
    <name>WebApp Template</name>
    <description>A Template for a WebApp Project</description>

    <properties>
        <revision>1.0.0</revision>
        <java.version>25</java.version>
        <spring.boot.version>4.0.3</spring.boot.version>
        <lombok.version>1.18.42</lombok.version>

        <junit.excludedTags/>
        <junit.includedTags/>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Are these required? Doesnt this get handled via <java.version>25</java.version> -->
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <testcontainers.version>1.21.4</testcontainers.version>
    </properties>

    <developers>
        <developer>
            <name>Matthijs Smets</name>
            <email>matthijs.smets@frankframework.org</email>
            <organization>Frank!Framework</organization>
            <organizationUrl>https://frankframework.org</organizationUrl>
        </developer>
        <developer>
            <name>Sergi Philipsen</name>
            <email>sergi@frankframework.org</email>
            <organization>Frank!Framework</organization>
            <organizationUrl>https://frankframework.org</organizationUrl>
        </developer>
    </developers>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.wimdeblauwe</groupId>
            <artifactId>testcontainers-cypress</artifactId>
            <version>1.9.1</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.findbugs</groupId>
                    <artifactId>jsr305</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-junit-jupiter</artifactId>
            <version>2.0.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <id>pnpm install</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <workingDirectory>src/main/frontend</workingDirectory>
                            <executable>pnpm</executable>
                            <arguments>
                                <argument>i</argument>
                                <argument>--frozen-lockfile</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pnpm build</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <workingDirectory>src/main/frontend</workingDirectory>
                            <executable>pnpm</executable>
                            <arguments>
                                <argument>run</argument>
                                <argument>build</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-frontend-to-TestClasses</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                            <resources>
                                <!-- Copy the Cypress tests and configuration to the test output directory -->
                                <resource>
                                    <directory>${project.basedir}/src/main/frontend</directory>
                                    <filtering>false</filtering>
                                    <targetPath>e2e</targetPath>
                                    <includes>
                                        <include>tsconfig.json</include>
                                        <include>cypress/**</include>
                                    </includes>
                                    <excludes>
                                        <exclude>cypress/test-results/**</exclude>
                                    </excludes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docker</id>
            <properties>
                <config.image.repository>ghcr.io/frankframework</config.image.repository>
                <config.image.name>webapp-template</config.image.name>
                <config.image.tag>${config.image.name}</config.image.tag>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>prepare-package</id>
                                <phase>package</phase>
                                <configuration>
                                    <target>
                                        <exec executable="docker" failonerror="true">
                                            <arg value="build"/>
                                            <arg value="-f"/>
                                            <arg value="docker/Dockerfile"/>
                                            <arg value="--no-cache"/>
                                            <arg value="-t"/>
                                            <arg value="${config.image.tag}:latest"/>
                                            <arg value="-t"/>
                                            <arg value="${config.image.tag}${revision}"/>
                                            <arg value="-t"/>
                                            <arg value="${config.image.repository}/${config.image.tag}:latest"/>
                                            <arg value="-t"/>
                                            <arg value="${config.image.repository}/${config.image.tag}:${revision}"/>
                                            <arg value="."/>
                                        </exec>
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
